# coq-synth

./: LICENSE  README.md  coq_synth.opam  dune  dune-project
lib/: coq_synth.ml  coq_synth.mli  dune
